--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "polymer": "Polymer/polymer#~1.0",
     "layout": "Polymer/layout",
-    "iron-selector": "PolymerElements/iron-selector#~1.0.2"
+    "iron-selector": "PolymerElements/iron-selector#~1.0.2",
+    "font-awesome": "~4.3.0"
   },
   "resolutions": {
     "polymer": "^1.0.0"
